<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.instructions.InstructionsScreen">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/instructions_headline"
            android:textSize="@dimen/textSizeHeadline"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/instructions_body"
            android:textSize="@dimen/textSizeValue" />

        <Button
            android:id="@+id/btnToShoeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_btn"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/btn_to_shoe_list" />

    </LinearLayout>
</layout>